# fgl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: 01_basic_sysinfo.c  02_basic_keyboard.c  03_basic_mouse.c  04_basic_shapes.c  05_basic_sprites.c  06_basic_text.c
include/: fgl.h
src/: core.c  shapes.c  sprites.c  text.c
